add PermGen memory, fix class loading
git-svn-id: svn+ssh://eos.nps.edu/usr/local/svn/wcm/Viskit/trunk@1319 0de750ab-c0a9-dc11-9d74-0011435b89d6